<?xml version="1.0"?>

<package format="2">
  <name>ronavi_navigation_global</name>
  <version>0.0.1</version>
  <description>This package holds config and launch files for running the ronavi company robots</description>
  
  <author>Vsevolod Egorov</author>
  <maintainer email="Vsevolod.Egorov@ronavi.ru">Junior ROS developer</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/sees1/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <exec_depend>slam_benchmark</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>topic_tools</exec_depend>

</package>
